# bthpool

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: bthpoolConfig.cmake.in
examples/: CMakeLists.txt  example.cpp
include/bthpool/: bthpool.hpp
include/bthpool/internal/: safe_queue.hpp
tests/: CMakeLists.txt  test_basic.cpp
